# oca-ocb-l10n_europe

./: README.md
odoo-bringout-oca-ocb-l10n_account_edi_ubl_cii_tests/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_ar_website_sale/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_at/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_be/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_be_pos_sale/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_bg/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_ch/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_ch_pos/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_cn_city/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_cr/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_cz/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_de/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_de_skr03/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_de_skr04/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_din5008_purchase/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_dk/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_do/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_ee/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_es/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_fr_facturx_chorus_pro/: README.md  pyproject.toml
odoo-bringout-oca-ocb-l10n_fr_facturx_chorus_pro/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
(+673 files in other folders)
